<resources>
    <string name="app_name">CleanBM</string>

    <!-- Google Place Browser Key    -->
    <string name="browser_key">AIzaSyCJWHBdeonUF9Gafppf6Ag23NRiUhuuzoE</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="connection_not_available">It seems that you are not connected to the Internet. Kindly check your network settings.</string>

    <string name="OK">OK</string>
    <string name="enter_name">Please enter your name.</string>
    <string name="enter_email">Please enter your valid email id.</string>
    <string name="enter_password">Your password must be at least 4 characters long. Please try another.</string>
    <string name="enter_Confirmpassword">You cannot leave this empty.</string>
    <string name="passwordmismatch">Your password does not match.</string>
    <string name="enter_email_hint">Enter your email id to reset the password.</string>
    <string name="forgotpass">FORGET PASSWORD</string>
    <string name="verify_email">Look in your email for a confirmation link to get started.</string>
    <string name="verify_after_login">First verify your email id.</string>
    <string name="enter_login_username">Please enter email id.</string>
    <string name="enter_login_password">Please enter password.</string>
    <string name="reset_password">Please check your mail box to reset your password.</string>
    <string name="login_invalid">Email id and password does not match.</string>
    <string name="login_first_message">You must login first.</string>
    <string name="Home">Home</string>
    <string name="Login_menu">Login/Sign Up</string>
    <string name="Logout">Logout</string>
    <string name="search_near_me">Search Near Me</string>
    <string name="search_location">Search Location</string>
    <string name="add_new_location">Add New Location</string>
    <string name="support">Support</string>
    <string name="forget_pass">Forget password?</string>
    <string name="login_btn">Login</string>
    <string name="loading">Please wait..</string>
    <string name="sign_up_page">Register Your Account</string>
    <string name="my_account">My Account</string>
    <string name="UpgradeAccount">Upgrade to Premium</string>
    <string name="save_changes">Save changes</string>
    <string name="search_location_title1">Push for nearest clean bathroom.</string>
    <string name="search_location_title2">Results are based on your current location.</string>
    <string name="search_location_near_me">Near Me</string>
    <string name="search_look_up">Look Up This Location</string>
    <string name="add_location_title1">Give Your CleanBM Rating :</string>
    <string name="add_comment">Add Your Comment and Rating.</string>
    <string name="GPSsettings">GPS settings</string>
    <string name="GPSEnable">It seems that your location service is not enabled. Do you want to enable it to enjoy some feature of app?</string>
    <string name="Settings">Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="enter_location_name">Please Enter location Name.</string>
    <string name="enter_bath_description">Please Enter Review Message.</string>
    <!-- For Parse object access keys -->
    <string name="parse_app_id">n2FEMcVdsaoobBxDypgkxF7uSQ3tYBrtDJ4F15zZ</string>
    <string name="parse_client_id"> iqHFj1h4QAoy9H3N2jgDg7xAVszinTZV433TxkCt</string>
    <!--Facebook application id -->
    <string name="fb_app_id">1664088973823924</string>
</resources>
