<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/title_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:fadingEdge="none"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center|top"
            android:gravity="center"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            style="@style/txt_titlebar_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="17sp"
            android:layout_gravity="center_horizontal|center"
            android:text="@string/search_location_title1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5sp"
            android:text="@string/search_location_title2"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_near_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/near_me_button_icon" />

                <TextView
                    android:id="@+id/txt_NearMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_marginBottom="40sp"
                    android:text="@string/search_location_near_me"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="3sp"
                    android:background="@drawable/login_line" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtSignUp"
                    style="@style/txt_titlebar_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="Advanced Search" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.widgets.CustomAutoCompleteTextView
                    android:id="@+id/edtSearchLocation"
                    style="@style/edit_text_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/search_location_icon"
                    android:drawablePadding="20sp"
                    android:hint="Location"
                    android:inputType="textPersonName"
                    android:paddingLeft="20sp"
                    android:paddingRight="20sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtLookUpThisLocation"
                    style="@style/button_txtstyle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_box"
                    android:clickable="true"
                    android:gravity="center_vertical|center"
                    android:paddingBottom="5sp"
                    android:text="@string/search_look_up" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>
</LinearLayout>