<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center|top"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10sp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center_vertical|center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/basic_profile"
            style="@style/txt_titlebar_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:text="You have the Basic Plan"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <TextView
            android:id="@+id/txtUpgradeAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:textSize="18sp"
            android:gravity="center_vertical|center"
            android:paddingBottom="5sp"
            android:textColor="@color/wallet_link_text_light"
            android:text="@string/UpgradeAccount" />

        <TextView
            android:id="@+id/textView2"
            style="@style/txt_titlebar_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/my_account" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        android:fadingEdge="none"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtName"
                    style="@style/edit_text_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/username_icon"
                    android:drawablePadding="15sp"
                    android:ems="10"
                    android:hint="Username"
                    android:inputType="textPersonName"
                    android:paddingLeft="15sp"
                    android:paddingRight="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtEmail"
                    style="@style/edit_text_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/username_icon"
                    android:drawablePadding="15sp"
                    android:ems="10"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="15sp"
                    android:paddingRight="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtPassword"
                    style="@style/edit_text_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/password_icon"
                    android:drawablePadding="20sp"
                    android:ems="10"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:paddingLeft="20sp"
                    android:paddingRight="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtConfirmPassword"
                    style="@style/edit_text_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/password_icon"
                    android:drawablePadding="20sp"
                    android:ems="10"
                    android:hint="Confirm Password"
                    android:inputType="textPassword"
                    android:paddingLeft="20sp"
                    android:paddingRight="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <Button
                    android:id="@+id/saveChangeBtn"
                    style="@style/button_txtstyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_box"
                    android:clickable="true"
                    android:gravity="center_vertical|center"
                    android:paddingBottom="5sp"
                    android:textAllCaps="false"
                    android:text="@string/save_changes" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>